# khy_os

./: .gitignore  AGENTS.html  AGENTS.md  README.html  README.md  RELEASE_FIX_PROMPT.md  _tmp_check_bridge.ps1  khy问题列表1.md  khy问题列表2.md  khy问题列表3.md  package-lock.json  scan_test.js
software/khyquant/: MANIFEST.in  PACKAGING.html  PACKAGING.md  pyproject.toml  setup.py
software/khyquant/config/: referencePrices.js
software/khyquant/controllers/: comprehensiveDataController.js  instrumentController.js  marketController.js
software/khyquant/frontend/: Dockerfile  capacitor.config.ts  eslint.config.js  index.html  ml-test.html  nginx.conf  package-lock.json  package.json  vite.config.js
software/khyquant/handlers/: bootstrap.js  data.js  formatters.js
software/khyquant/khy_quant/: __init__.py  _bootstrap.py  app.py  cli.py
software/khyquant/middleware/: auth.js
software/khyquant/ml/: check_model_features.py  config.yaml  data_collector.py  feature_engineer.py  predict.py  requirements-fixed.txt  requirements.txt  retrain_distilled.py  retrain_with_18_features.py  train_18_features.py  trainer.py
software/khyquant/routes/: backtest.js  bankTransfer.js  comprehensiveData.js  dashboard.js  favorites.js  futuresTickData.js  instrumentSync.js  instruments.js  klineData.js  market.js  marketData.js  news.js  replay.js  stockProxy.js  strategy.js  tickBacktest.js  trade.js  trades.js  tradingAgents.js  watchlist.js
software/khyquant/services/: adataMarketService.py  adataService.py  agentDisplay.js  akshareDataService.js  akshareService.py  akshareUpdater.js  alternativeDataService.js  backtestEngine.js  brokerService.js  cacheService.js  comprehensiveDataService.js  data_source.py  (+35 more)
(+6636 files in other folders)
